# echodawn

./: .clang-format  .gitignore  192.168.1.112  Makefile  README.md  README.org  TASKS.org  capture.c  capture.h  readme.md  vgpu-catpure-test.c  vgpu-video-test.backup.c  vgpu-video-test.c  vgpuVideo.c  vgpuVideo.h
EDC/: .gitignore  Cargo.toml  build.rs
EDC/proto/: edcs_proto.capnp
EDC/src/: lib.rs  main.rs
EDC/src/decoder/: decoder.cpp  decoder.h
EDC/src/edc_client/: client.rs  config.rs  edcs_proto.rs  edcs_proto_capnp.rs  mod.rs  options.rs
EDC/src/edc_decoder/: mod.rs
EDC/src/edc_decoder/cpp_decoder/inc/: decoder.h
EDC/src/edc_decoder/cpp_decoder/src/: decoder.cc
EDC/src/edc_ui/: evloop.rs  mod.rs
EDC/src/edc_ui/edc_ui/ui/: control_bar.rs  debug_area.rs  ffmpeg.rs  mod.rs  video_decoder.rs
EDC/src/edc_ui/ui/: connect.rs  control_bar.rs  debug_area.rs  ffmpeg.rs  mod.rs  mpv.rs  ui_element.rs  video_decoder.rs
EDC/src/edcs_client/: blocking_client.rs  client.rs  config.rs  keyboard_event.rs  mod.rs
EDC/src/edcs_config/: connection_config.rs  mod.rs
EDCS/: .gitignore  Cargo.toml  README.org  build.rs
EDCS/bindings/: edssWrapper.h  edss_bindings.rs
EDCS/proto/: edcs_proto.capnp  edcs_proto.proto
EDCS/src/: lib.rs  main.rs
EDCS/src/edcs_server/: config.rs  edcs_proto.rs  edcs_proto_capnp.rs  handler.rs  mod.rs  server.rs
EDCS/src/edss_safe/: edss.rs  edss_unsafe.rs  mod.rs
EDCSProtocol/proto/: edcs_proto.proto
EDSS/: Doxyfile  README.md  README.org  meson.build  vgpuVideo.h
EDSS/CAL/vgpu/: README.org  calPluginVgpu.c  meson.build  vgpuVideo.c
EDSS/inc/: edssCALInterface.h  edssCapture.h  edssInterface.h  edssInterfaceInternal.h  edssLog.h  edssStatus.h  edssStream.h
EDSS/src/: edssCapture.c  edssInterface.c  edssLog.c  edssStream.c
