[package]
name = "edc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = { version = "0.23", features = [ "dangerous_configuration" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io", "compat"] }
serde = { version = "1", features = [ "derive" ] }
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
toml = "0.5"
clap = { version = "3.2", features = ["derive"] }
rustls-pemfile = "1"
webpki = "0.22"
prost = "0.10"
prost-types = "0.10"

[build-dependencies]
prost-build = "0.10"
