[package]
name = "edc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = { version = "0.23", features = [ "dangerous_configuration" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io", "compat"] }
serde = { version = "1", features = [ "derive" ] }
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
toml = "0.5"
clap = { version = "3.2", features = ["derive"] }
rustls-pemfile = "1"
webpki = "0.22"
prost = "0.10"
prost-types = "0.10"
# It doesn't really matter which mpv-sys we use
libmpv-sys = { git = "https://github.com/anlumo/libmpv-rs" }
glow = "0.11"
glutin = "0.28"
lazy_static = "1.4.0"
egui_glow = { version = "0.18", features = [ "winit" ] }
egui = "0.18"
epaint = "0.18"
futures = "0.3"
flume = { version = "0.10", features = [ "async" ] }
async-mutex = "1"
console-subscriber = "0.1"
input-linux-sys = "0.7"
platform-dirs = "0.3"
puffin = "0.13"
ffmpeg-sys-next = "5.1.1"
cxx = "1.0"

[build-dependencies]
prost-build = "0.10"
cxx-build = "1.0"

