[package]
name = "edcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio-rustls = "0.23"
rustls-pemfile = "1"
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
capnp = "0.14"
capnp-futures = "0.14"
tokio-util = { version = "0.7", features = [ "io", "compat"] }
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
anyhow = { version = "1", features = ["backtrace"] }

[build-dependencies]
bindgen = "0.60"
capnpc = "0.14"
