[package]
name = "edcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio-rustls = "0.23"
rustls-pemfile = "1"
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
tokio-util = { version = "0.7", features = [ "io", "compat"] }
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
anyhow = { version = "1", features = ["backtrace"] }
prost = "0.10"
prost-types = "0.10"
rand = "0.8"
base64 = "0.13"
# This library might not be too great
input-event-codes = "5.16.8"

[build-dependencies]
bindgen = "0.60"
prost-build = "0.10"
